--- a/enierent/package.json
+++ b/enierent/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^12.23.25",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
