--- a/enierent/package.json
+++ b/enierent/package.json
@@ -17,18 +17,21 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "fuse.js": "^7.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.556.0",
     "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
