--- a/enierent/package.json
+++ b/enierent/package.json
@@ -6,26 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest",
+    "type-check": "tsc --noEmit",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.23.25",
+    "formik": "^2.4.9",
+    "framer-motion": "^12.23.26",
     "fuse.js": "^7.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.556.0",
     "next": "^16.0.10",
+    "pannellum": "^2.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "yup": "^1.7.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
@@ -33,6 +44,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
+    "@types/pannellum": "^2.5.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
